# why

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: CNAME  architecture.md
docs/design/: why-idea-04-18-2026-1.0.0.md
docs/designs/: 2026-04-19-commit-parser-design.md  2026-04-23-select-key-commits-design.md  2026-04-24-diff-extraction-design.md  2026-04-24-llm-provider-design.md  2026-04-25-brief-flag-design.md  2026-04-25-prompt-template-design.md  2026-04-25-timeline-ascii-design.md  2026-04-25-two-pass-synthesis-design.md  2026-04-26-github-pr-integration-design.md
docs/sleipnir/: design-issue-82-homebrew.md  design-issue-92-backend-protocol.md  design-issue-93-openai-compatible.md  design-issue-94-auto-shrink.md  design-issue-95-num-ctx-ollama.md  design-issue-96-strict-citations-local.md  design-issue-97-local-llm-docs.md  state.json
src/why/: __init__.py  _errors.py  cache.py  citations.py  cli.py  commit.py  diff.py  git.py  github.py  history.py  llm.py  prompts.py  render.py  scoring.py  (+4 more)
tests/: _helpers.py  conftest.py  test_backends_base.py  test_cache.py  test_citations.py  test_cli.py  test_commit.py  test_diff.py  test_git.py  test_github.py  test_history.py  test_llm.py  test_openai_compatible_backend.py  test_package_metadata.py  test_prompts.py  test_render.py  test_scoring.py  test_shrink.py  test_smoke.py  test_symbols.py  test_synth.py  test_target.py  test_timeline.py
website/: CNAME  Gemfile  _config.yml  index.md  install.md  local-llm.md  usage.md
(+6 files in other folders)
